--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	background-color: #f8f8ff;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .headH {
@@ -15,12 +16,13 @@ body {
 	right: 0;
 	background-color: #fff;
 	height: 70px;
-	box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.10);
+	box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05);
 	justify-content: space-between;
 	align-content: center;
 	align-items: center;
 	padding-inline: 25px;
-	border: 1px solid #ededff;
+	border: 1px solid #e8e8e8;
+	font-family: "Kanit", sans-serif;
 	z-index: 99;
 }
 
@@ -30,8 +32,18 @@ body {
 	gap: 10px;
 }
 
+.headI h1 {
+  color: #0054ac;
+  font-family: "Kanit", sans-serif;
+  font-size: 38px;
+}
+
 h3#titleSec {
-  margin-top: 120px;
+  margin-top: 100px;
+  font-family: "Kanit", sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 24px;
   padding-inline: 25px;
 }
 
@@ -58,9 +70,11 @@ h3#titleSec {
   background-color: #fff;
   border-radius: 12px;
   padding: 25px 15px;
-  box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05);
+  box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05),
+  rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;;
   margin: 10px;
   gap: 20px;
+  
 }
 
 @media (min-width: 768px) {
@@ -124,40 +138,43 @@ h3#titleSec {
 
 
 button {
-	box-shadow: 0 15px 33px -10px #4162ff;
-	color: #fff;
-	background-color: #5476ff;
 	border: none;
-	border-radius: 8px;
 	padding: 10px 15px;
 	cursor: pointer;
-	color: #fff;
 	font-weight: 500;
-	transition: all .3s;
+	transition: all .3s ease;
 	align-self: flex-start;
+    background-color: #7b57ff;
+    border: none;
+  	color: rgb(241, 241, 241);
+  	border-radius: 20px;
+  	box-shadow: 0 4px 6px -1px #977ef3, 0 2px 4px -1px #977ef3;
 }
 
 button:hover {
-	box-shadow: 0 5px 20px -10px #4162ff;
+	background-color: #9173ff;
+ 	 box-shadow: 0 10px 15px -3px #977ef3, 0 4px 6px -2px #977ef3;
+ 	 transition-duration: .2s;
 }
 
 button.btn {
 	padding: 5px;
 	justify-content: center;
 	display: flex;
-	background: #fff;
 	position: relative;
 	margin: 0 5px;
 	border-radius: 50%;
 	cursor: pointer;
 	transition: all 300ms ease-in-out;
-	box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.10);
-	border: 1px solid #ededff;
+	box-shadow: none;
+	background-color: #f8f8ff;
+	border: 1px solid #e8e8e8;
 }
 
 button.btn:hover {
-	border-color: #5476ff;
-	background-color: #f8f8ff;
+	border-color: #7b57ff;
+	background-color: #fff;
+	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 }
 
 button.btn img {
@@ -166,14 +183,15 @@ button.btn img {
 }
 
 button.clear {
-	background-color: #fff;
-	border: 1px solid #ededff;
 	border-radius: 8px;
-	padding: 7px 10px;
+ 	transition: all .6s ease;
+	padding: 9px 10px;
+	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
+	background-color: #f8f8ff;
+	border: 1px solid #e8e8e8;
+	transition-duration: .2s;
 	cursor: pointer;
 	font-weight: 500;
-	transition: all .3s;
-	box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.10);
 	align-self: center;
 	display: flex;
 	justify-content: center;
@@ -181,19 +199,29 @@ button.clear {
 }
 
 button.clear:hover {
-	background-color: #f8f8ff;
+	background-color: #fff;
+    transition-duration: .2s;
 }
 
-label {
-	font-weight: bold;
+label.main {
+	font-size: 18px;
 	margin-right: 10px;
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
 }
 
 input {
 	padding: 8px;
 	margin: 10px 0;
-	border: 1px solid #ccc;
+	border: 1px solid #e8e8e8;
+	background-color: #fff;
+	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 	border-radius: 5px;
+}
+
+input:focus {
+	outline: none;
+	border-color: #7b57ff;
 }
 
 .inline {
@@ -207,13 +235,15 @@ input {
 select {
 	padding: 8px;
 	margin: 10px 0;
-	border: 1px solid #ccc;
 	border-radius: 5px;
 	flex: 1;
+	border: 1px solid #e8e8e8;
+	background-color: #fff;
+	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 }
 
 input[type="number"] {
-	width: 4ch;
+	width: 5ch;
 }
 
 input[type="text"] {
@@ -237,12 +267,12 @@ input[type="text"] {
 	margin: 0 auto;
 	border-radius: 50px;
 	max-width: max-content;
-	box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.10);
-	background: #fff;
+	border: 1px solid #e8e8e8;
+	background-color: #fff;
+	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 	padding: 5px 4px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	z-index: 5;
-	border: 1px solid #ededff;
 }
