--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ select {
 	margin: 10px 0;
 	border-radius: 5px;
 	flex: 1;
+    min-width: 80px;
 	border: 1px solid #e8e8e8;
 	background-color: #fff;
 	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
