--- a/style.css
+++ b/style.css
@@ -9,6 +9,31 @@ body {
 	transition: all .3s ease;
 }
 
+body::before {
+		content: '';
+		width: 100vw;
+		height: 100vh;
+		background: linear-gradient(
+		  90deg,
+		  color-mix(in oklch, canvasText, transparent 70%) 0.0625rem,
+		  transparent 0.0625rem 2.75rem
+		  )
+		  50% 50% / 2.75rem 2.75rem,
+		  linear-gradient(color-mix(in oklch, canvasText, transparent 70%) 0.0625rem, transparent 0.0625rem 2.75rem) 50% 50% / 2.75rem 2.75rem;
+		mask: linear-gradient(-20deg, transparent 70%, #f0f0f0);
+		top: 20px;
+		transform-style: flat;
+		pointer-events: none;
+		position: fixed;
+		z-index: -1;
+}
+@media (min-width: 768px) {
+	body::before {
+		mask: linear-gradient(-20deg, transparent 60%, #f0f0f0);
+	}
+}
+
+
 .headH {
 	position: fixed;
 	display: flex;
@@ -18,7 +43,7 @@ body {
 	right: 0;
 	background-color: #fff;
 	height: 70px;
-	box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05);
+	box-shadow:  0 15px 50px #0000000f;
 	justify-content: space-between;
 	align-content: center;
 	align-items: center;
@@ -43,6 +68,7 @@ body {
   font-family: "Kanit", sans-serif;
   font-size: 38px;
   letter-spacing: 2px;
+  font-weight: 510;
 }
 
 h3#titleSec {
@@ -71,22 +97,17 @@ h3#titleSec {
 .secDP,
 .secRMK,
 .secRP {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  padding: 25px 15px;
-  border-top: 5px solid #7b57ff;
-  box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05),
-  rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;;
-  margin: 10px;
-  gap: 20px;
-  
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #fff;
+	padding: 25px 15px;
+	border: 1px solid #e3e7eb;
+	box-shadow: 5px 10px 20px 0 #0000270d, rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
+	margin: 10px;
+	gap: 20px;
+	border-radius: 8px;
 }
 
 @media (min-width: 768px) {
@@ -298,7 +319,7 @@ input[type="text"] {
 	max-width: max-content;
 	border: 1px solid #e8e8e8;
 	background-color: #fff;
-	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
+	box-shadow:  0 15px 50px #0000000f, rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 	padding: 5px 4px;
 	display: flex;
 	align-items: center;
