--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 body {
 	margin: 0;
 	padding: 0;
@@ -7,32 +5,8 @@ body {
 	background-color: #f8f8ff;
 	color: #25265e;
 	transition: all .3s ease;
+	font-family: "Urbanist", serif;
 }
-
-body::before {
-		content: '';
-		width: 100vw;
-		height: 100vh;
-		background: linear-gradient(
-		  90deg,
-		  color-mix(in oklch, canvasText, transparent 70%) 0.0625rem,
-		  transparent 0.0625rem 2.75rem
-		  )
-		  50% 50% / 2.75rem 2.75rem,
-		  linear-gradient(color-mix(in oklch, canvasText, transparent 70%) 0.0625rem, transparent 0.0625rem 2.75rem) 50% 50% / 2.75rem 2.75rem;
-		mask: linear-gradient(-20deg, transparent 75%, #f0f0f0);
-		top: 20px;
-		transform-style: flat;
-		pointer-events: none;
-		position: fixed;
-		z-index: -1;
-}
-@media (min-width: 768px) {
-	body::before {
-		mask: linear-gradient(-20deg, transparent 60%, #f0f0f0);
-	}
-}
-
 
 .headH {
 	position: fixed;
@@ -42,14 +16,14 @@ body::before {
 	left: 0;
 	right: 0;
 	background-color: #fff;
-	height: 70px;
-	box-shadow:  0 15px 50px #0000000f;
+	height: 60px;
+	box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05);
 	justify-content: space-between;
 	align-content: center;
 	align-items: center;
 	padding-inline: 25px;
 	border: 1px solid #e8e8e8;
-	font-family: "Kanit", sans-serif;
+	font-family: "Urbanist", serif;
 	z-index: 99;
 }
 
@@ -63,17 +37,24 @@ body::before {
 	gap: 10px;
 }
 
+.headL {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
 .headI h1 {
-  color: #0054ac;
-  font-family: "Kanit", sans-serif;
-  font-size: 38px;
-  letter-spacing: 2px;
-  font-weight: 510;
+	color: #f28430;
+	font-family: "Urbanist", serif;
+	font-size: 35px;
+	font-weight: 820;
+	margin-block: 0;
 }
 
 h3#titleSec {
   margin-top: 100px;
-  font-family: "Kanit", sans-serif;
+  font-family: "Urbanist", serif;
   font-weight: bold;
   text-align: center;
   font-size: 24px;
@@ -97,17 +78,22 @@ h3#titleSec {
 .secDP,
 .secRMK,
 .secRP {
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	background-color: #fff;
-	padding: 25px 15px;
-	border: 1px solid #e3e7eb;
-	box-shadow: 5px 10px 20px 0 #0000270d, rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
-	margin: 10px;
-	gap: 20px;
-	border-radius: 8px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 25px 15px;
+  border-top: 5px solid #645bff;;
+  box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05),
+  rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;;
+  margin: 10px;
+  gap: 20px;
+  
 }
 
 @media (min-width: 768px) {
@@ -175,25 +161,28 @@ h3#titleSec {
 
 
 button {
-	border: none;
-	padding: 10px 15px;
+	box-sizing: border-box;
+	border: 0;
+	border-radius: 20px;
+	color: #fff;
+	padding: 1em 1.8em;
+	background: #645bff;
+	display: flex;
+	transition: 0.2s background;
+	align-items: center;
+	gap: 0.6em;
+	font-weight: bold;
 	cursor: pointer;
-	font-weight: 500;
-	transition: all .3s ease;
-	align-self: flex-start;
-    background-color: #7b57ff;
-    border: none;
-  	color: rgb(241, 241, 241);
-  	border-radius: 20px;
-  	box-shadow: 0 4px 6px -1px #977ef3, 0 2px 4px -1px #977ef3;
-	user-select: none;
-}
+	justify-content: center;
+  }
+  
+  button:hover {
+	background-color: #111;
+  }
 
-button:hover {
-	background-color: #9173ff;
- 	 box-shadow: 0 10px 15px -3px #977ef3, 0 4px 6px -2px #977ef3;
- 	 transition-duration: .2s;
-}
+  button.full {
+	width: 100%;
+  }
 
 button.btn {
 	padding: 5px;
@@ -210,7 +199,7 @@ button.btn {
 }
 
 button.btn:hover {
-	border-color: #7b57ff;
+	border-color: #645bff;;
 	background-color: #fff;
 	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 }
@@ -248,9 +237,8 @@ button.clear:hover, button.verify:hover {
 }
 
 label.main {
-	font-size: 18px;
-	margin-right: 10px;
-  font-family: "Kanit", sans-serif;
+  margin-right: 10px;
+  font-family: "Urbanist", serif;
   font-weight: 500;
 }
 
@@ -265,7 +253,7 @@ input {
 
 input:focus {
 	outline: none;
-	border-color: #7b57ff;
+	border-color: #645bff;;
 }
 
 .inline {
@@ -289,14 +277,14 @@ select {
 
 select:focus {
 	outline: none;
-	border-color: #7b57ff;
+	border-color: #645bff;;
 }
 
 input[type="number"] {
 	width: 5ch;
 }
 
-input[type="text"] {
+input[type="text"]:not(#username) {
 	width: 10ch;
 }
 
@@ -319,7 +307,7 @@ input[type="text"] {
 	max-width: max-content;
 	border: 1px solid #e8e8e8;
 	background-color: #fff;
-	box-shadow:  0 15px 50px #0000000f, rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
+	box-shadow: 0px 8px 12px rgba(2,30,84,.06), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
 	padding: 5px 4px;
 	display: flex;
 	align-items: center;
@@ -329,12 +317,205 @@ input[type="text"] {
 
 footer {
 	display: flex;
-    justify-content: center;
-    padding-bottom: 55px;
+	justify-content: center;
 	color: #25265eab;
+	background-color: #f4f4f5;
+	margin-top: 30px;
+	border-top: 1px solid #e3e7eb;
 }
 
 footer span {
 	color: #25265e;
 	font-weight: 400;
+}
+
+/* Login form */
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  border: 1px solid #e3e7eb;
+  box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05),
+  rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;;
+  margin: 80px auto;
+  max-width: 350px;
+  gap: 20px;
+}
+
+.top-container {
+  background-color: #f4f4f5;
+  padding: 25px;
+  justify-content: center;
+  display: flex;
+}
+
+  .bottom-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 15px;
+	overflow: auto;
+	padding-inline: 25px;
+  }
+
+  .top-box {
+	font-family: "Urbanist", serif;
+	text-align: center;
+	font-weight: 400;
+  }
+
+  .top-box h2 {
+	margin: 5px;
+	font-weight: bold;
+  }
+
+  .top-box p {
+	color: #25265eab;
+  }
+
+  .input-container {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	width: 100%;
+  }
+
+  .input-container .input-field {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+  }
+
+  .small {
+	color: #25265eab;
+	font-size: 14px;
+  }
+
+
+  .landing {
+	margin: 60px auto 50px;
+  padding-block: 25px;
+  background-image: url(https://pbs.twimg.com/media/GLsuIvSWcAAYiMN.jpg);
+  width: 100vw;
+  height: 500px;
+  background-repaeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+  x: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.img-overlay {
+	width: 100%;
+  height: auto;
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+  opacity: .8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  }
+
+  .heroText {
+	position: absolute;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  }
+
+  .heroText button {
+	margin-left: 25px;
+  }
+
+  .landing h2 {
+	margin: 0;
+  color: #fff;
+  font-size: 34px;
+  font-weight: 900;
+  float: left;
+  text-wrap: wrap;
+  padding-inline: 25px;
+  }
+
+  .landing p {
+	margin-top: 20px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  float: left;
+  text-wrap: wrap;
+  padding-inline: 25px;
+}
+
+  .landing h2 span {
+	background-image: linear-gradient(to right, #645bff, #f28430);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
+
+  @media (min-width: 768px) {
+	.landing {
+		height: 600px;
+	}
+
+	.landing h2 {
+		font-size: 64px;
+	}
+
+	.landing p {
+		font-size: 20px;
+	}
+
+	.heroText {
+		padding-inline: 50px;
+		gap: 50px;
+	}
+  }
+
+.tools-grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
+	grid-gap: 20px;
+	margin-inline: 25px;
+}
+
+.tool-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #fff;
+	border-inline: 1px solid #e3e7eb;
+	box-shadow: 0px 5px 10px rgba(86, 89, 146, 0.05), rgba(86, 89, 146, 0.05) 0px -3px 6px 0px inset;
+	text-align: center;
+	transition: transform 0.2s;
+	border-block-start: 5px solid #645bff;
+	border-block-end: 1px solid #e3e7eb;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	padding: 15px;
+}
+.tool-card:hover {
+	transform: scale(1.05);
+}
+
+.tool-card h3 {
+	margin-top: 0;
+}
+
+/* Mobile-friendly adjustments */
+@media (max-width: 600px) {
+	.tools-grid {
+		grid-template-columns: 1fr; /* Stack on smaller screens */
+	}
 }
